force-app/main/default/objects/Distributor_Dashboard_Tabs__c/Distributor_Dashboard_Tabs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Distributor Dashboard Tabs</label>
</CustomObject>