force-app/main/default/objects/Distributor_Dashboard_Tabs__c/fields/Controller_Name__c.field-meta.xml
<CustomField>
    <fullName>Controller_Name__c</fullName>
    <label>Controller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>