force-app/main/default/objects/Distributor_Dashboard_Tabs__c/fields/Display_On_Portal__c.field-meta.xml
<CustomField>
    <fullName>Display_On_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display On Portal</label>
    <type>Checkbox</type>
</CustomField>