force-app/main/default/objects/Distributor_Dashboard_Tabs__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>